...
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="177dp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/confirmGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:layout_marginBottom="467dp"
        android:text="Select"
        app:layout_constraintBottom_toBottomOf="parent"
...
