<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_account"
            android:icon="@drawable/ic_menu_manage"
            android:title="My Account" />
        <item
            android:id="@+id/purchase_history"
            android:title="Purchase History"
            android:icon="@drawable/ic_receipt"/>
        <item
            android:id="@+id/my_wishlist"
            android:title="My Wishlist"
            android:icon="@drawable/ic_list"/>
        <item
            android:id="@+id/my_shoppingCart"
            android:title="ShoppingCart"
            android:icon="@drawable/ic_shopping_cart"/>
        <item
            android:id="@+id/my_recommendations"
            android:title="Book recommendations"
            android:icon="@drawable/ic_recommendations"/>
    </group>

</menu>
