<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".presentation.ViewBookInfoActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_view_book_info" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/viewBookLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:isScrollContainer="true"
            android:nestedScrollingEnabled="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bookImage"
                    android:layout_width="@dimen/view_book_image_width"
                    android:layout_height="@dimen/view_book_image_height"
                    android:contentDescription="@string/book_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingRight="@dimen/view_book_info_padding">

                    <Button
                        android:id="@+id/purchaseButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/view_book_button_margin"
                        android:background="@color/colorPrimary"
                        android:textColor="#FFFFFF"
                        android:text="@string/purchaseButton" />

                    <Button
                        android:id="@+id/addCartButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/view_book_button_margin"
                        android:background="@color/colorPrimary"
                        android:textColor="#FFFFFF"
                        android:text="@string/cartButton" />

                    <Button
                        android:id="@+id/viewCartButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/view_book_text_padding"
                        android:background="@color/colorPrimary"
                        android:textColor="#FFFFFF"
                        android:text="@string/viewCartButton" />

                    <Button
                        android:id="@+id/addButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/view_book_button_margin"
                        android:background="@color/colorPrimary"
                        android:textColor="#FFFFFF"
                        android:text="@string/wishButton" />

                    <Button
                        android:id="@+id/viewButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/view_book_text_padding"
                        android:background="@color/colorPrimary"
                        android:textColor="#FFFFFF"
                        android:text="@string/viewList" />
                </LinearLayout>
            </LinearLayout>

            <ListView
                android:id="@+id/bookDetail"
                style="@style/Widget.AppCompat.Light.ListView.DropDown"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="@dimen/view_book_info_padding" />

            <TextView
                android:id="@+id/rateTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="@dimen/view_book_text_padding"
                android:text="@string/please_rate_this_book"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <RatingBar
                android:id="@+id/bookRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:numStars="5"
                android:stepSize="1" />

            <EditText
                android:id="@+id/review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Write a review"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/submitRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="@dimen/review_purchase_button_margin"
                android:layout_marginRight="@dimen/review_purchase_button_margin"
                android:text="@string/rateButton" />
                android:text="@string/rateButton"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/rateHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="@dimen/view_book_text_padding"
                android:text="@string/ratings"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <ListView
                android:id="@+id/ratings"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/thumbnail_height" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>