...
            android:background="@color/colorPrimary"
            android:text="Sort By Price (DSC)"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <GridView
        android:id="@+id/browseView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:columnWidth="@dimen/book_catalog_button_width"
        android:gravity="center"
        android:horizontalSpacing="1dp"
...
